# low-latency

./: build.sh  meson.build
common/: Check.h  Limits.h  Logger.h  MCastSocket.cpp  MCastSocket.h  MEOrder.h  MarketUpdate.h  MemoryPool.h  STLUtils.h  SafeQueue.h  SocketUtils.cpp  SocketUtils.h  TCPServer.cpp  TCPServer.h  TCPSocket.cpp  TCPSocket.h  ThreadUtils.h  TimeUtils.h  Types.h
common/tests/: basic.cpp
exchange/: main.cpp
exchange/market_data/: MarketDataPublisher.cpp  MarketDataPublisher.h  MarketUpdate.h  SnapshotSynthesizer.cpp  SnapshotSynthesizer.h
exchange/matcher/: MEOrder.h  MEOrderBook.cpp  MEOrderBook.h  MatchingEngine.cpp  MatchingEngine.h
exchange/order_server/: ClientRequest.h  ClientResponse.h  FIFOSequencer.h  OrderServer.cpp  OrderServer.h
server/: TCPServer.h
server/tests/: basic.cpp
trading/: main.cpp
trading/market_data/: MarketDataConsumer.cpp  MarketDataConsumer.h
trading/order_gateway/: OrderGateway.cpp  OrderGateway.h
trading/strategy/: FeatureEngine.cpp  FeatureEngine.h  LiquidityTaker.cpp  LiquidityTaker.h  MarketMaker.cpp  MarketMaker.h  MarketOrder.h  MarketOrderBook.cpp  MarketOrderBook.h  OMOrder.h  OrderManager.cpp  OrderManager.h  PositionKeeper.cpp  PositionKeeper.h  RiskManager.h  TradeEngine.cpp  TradeEngine.h
